# cambench

./: CMakeLists.txt  README.md
configs/: a_fast.yaml  b_quality.yaml
include/cambench/: metrics.hpp  version.hpp
src/: main.cpp
